<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hw9.myfirstapp.MyActivity"
    tools:showIn="@layout/activity_my"
    android:orientation="vertical">


    <TextView
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Symbol"
        android:id="@+id/textView" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <AutoCompleteTextView
            android:id="@+id/symbol"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="24dp"
            android:ems="10"
            >
            <requestFocus />
        </AutoCompleteTextView>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="25dip"
            android:layout_height="25dip"
            android:layout_gravity="right" />
    </FrameLayout>


    <!--<EditText-->
        <!--android:inputType="textAutoComplete"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:id="@+id/symbol" />-->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            android:id="@+id/clear"
            android:onClick="buttonClearClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quote"
            android:id="@+id/quote"
            android:onClick="buttonQuoteClick"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Favorites"
            android:textStyle="bold"
            android:id="@+id/textView2" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp"
            android:text="@string/refresh_text"
            android:id="@+id/switch1"
            android:onClick="checkSwitch"
            android:layout_gravity="center_horizontal" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:background="@null"
            android:src="@drawable/recurring"
            android:onClick="onclickRefreshBtn"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/favorites"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <com.example.hw9.myfirstapp.SlideCutListView
            android:id="@+id/slideCutListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listSelector="@android:color/transparent"

            android:cacheColorHint="@android:color/transparent">
        </com.example.hw9.myfirstapp.SlideCutListView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        >
    </ProgressBar>
</LinearLayout>
